# WFF

./: LICENSE  Lexer.py  Logic.py  README.md  WFF.py  Wff.py  pyproject.toml
docs/: README.md
examples/: README.md
tests/: conftest.py  test_lexer.py  test_logic.py  test_proof.py  test_simplify.py  test_wff.py
wff/: __init__.py  core.py  lexer.py  proof.py
